# WEB_HW_12

./: pyproject.toml
src/: main.py
src/database/: alembic.ini  batabase.py
src/database/contacts/: models.py
src/database/migrations/: env.py
src/database/migrations/versions/: 3c27d09bd1ba_initial_migration.py
src/database/users/: models.py
src/routes/contacts/: routes.py
src/routes/users/: routes.py
src/schemas/contacts/: schemas.py
src/schemas/user/: schemas.py
src/services/: auth.py
